--- a/Myntra_App/pubspec.yaml
+++ b/Myntra_App/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^0.19.1 # help us to use SVG in our app
   provider: ^4.3.1 # for State management
   flutter_barcode_scanner: ^1.0.2
+  webview_flutter: ^2.0.4
 
 dev_dependencies:
   flutter_test:
