--- a/Myntra_App/pubspec.yaml
+++ b/Myntra_App/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^4.3.1 # for State management
   flutter_barcode_scanner: ^1.0.2
   webview_flutter: ^2.0.4
+  flutter_local_notifications: ^5.0.0+1
 
 dev_dependencies:
   flutter_test:
